 
[Other changes] 
 - Added ParameterList.getFirstValue() methods taking and additional "defaultValue" parameter.
 - Parametrized connectors
 - Added HTTPS connector for Jetty 6.0
 - The Jetty 6 extension now appears in the Javadocs due to the package renaming of the Jetty 5 extension.
 - Updated documentation, especially for the distribution. Suggested by Dave Pawson.
 
1.0 beta 17 (2006-07-19)
[Bugs fixed]
 - Fixed regression in Jetty 6.0 connector which prevented the handling of requests. 
 - When building its pattern, the HostRouter now adds case insensitive flags for scheme names and domain names, strictly following the URI specification. 
   Bug reported by Jim.
 - Fixed bugs in Reference.setHostName().
 - Fixed potential NPE in com.noelios.restlet.ext.fileupload.RepresentationContext. Reported by Mikkel Jensen.
 - Fixed potential NPE exceptions in the equals() methods of many metadata classes. Was causing a bug on http://www.noelios.com with English only browsers.
   Bug reported by Guillaume Laforge (Groovy).
 - For some unknown reason we were lower casing the type name in DefaultMediaType's constructor. This causes issues with FileUpload. 
   Reported by Mikkel Jensen.
 - Fixed potential NPE in Reference.getTargetRef(). Reported by Thierry Boileau.
 - Fixed issue in ServletCall which was not setting the reason phrase for error statuses. Reported by Bill Morone.

[API breaking changes]
 - Renamed Filter.attach/detach to get/setTarget. Users won't assume that multiple targets can be attached, also the target can be looked up.
 - Removed nextHandle() method from Handler and AbstractHandler. Didn't bring much value.
 - Renamed RestletContainer.attach/detach into get/setRoot. 
 - Renamed Router.getOptions() to getScorers() and changed the result type from List<Scorer> to ScorerList.
 - Removed Router.attach() methods and added equivalent add() methods to ScorerList.
 - Removed Router.detach() method. Use the getOptions().remove() methods instead.