@@ -26,6 +26,7 @@ Changes log
  - Added HTTPS connector for Jetty 6.0
  - The Jetty 6 extension now appears in the Javadocs due to the package renaming of the Jetty 5 extension.
  - Updated documentation, especially for the distribution. Suggested by Dave Pawson.
+ - Added more control on Simple HTTPS connector, see list of parameters.
  
 1.0 beta 17 (2006-07-19)
 [Bugs fixed]
